--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = django15, django16
 [testenv]
 commands = django-admin.py test
 setenv =
-    DJANGO_SETTINGS_MODULE=test_app.settings
+    DJANGO_SETTINGS_MODULE=test_app.test_app.settings
     PYTHONPATH={toxinidir}
 
 [base]
@@ -13,6 +13,7 @@ deps =
     django-mptt
     django-nose
     nose
+    model_mommy
 
 [testenv:django15]
 deps =
